fixed bug with z-index

--- a/docs/css/style.css
+++ b/docs/css/style.css
@@ -521,7 +521,7 @@ MENU CATALOG
   list-style: none;
   margin: 0;
   padding: 0;
-  z-index: 1; }
+  z-index: 5; }
 
 .menu-catalog__title {
   display: block;
