--- a/www/scss/_menu-catalog.scss
+++ b/www/scss/_menu-catalog.scss
@@ -8,7 +8,7 @@ MENU CATALOG
 	margin: 0;
 	padding: 0;
 
-	z-index: 1;
+	z-index: 5;
 }
 
 .menu-catalog__title {
